style: refactor Works section layout and styles - rename works list container for clarity - restructure work items for improved organization and alignment - enhance styles for better visual presentation and responsiveness - add comments for future reference on work images

--- a/src/components/sections/Works.astro
+++ b/src/components/sections/Works.astro
@@ -7,63 +7,90 @@
     <img src="/logo-hot-lava-gradient.svg" alt="Hot Lava">
   </div>
   <div class="wrapper">
-    <div class="container works__list">
-
-      <div class="work__container">
-        <div class="work__item js-work" data-slide="meijer">
-          <div class="name">
-            <p>Meijer</p>
+    <div class="container works__container">
+      
+      <div class="works__list">
+        <!-- P&G: Collision -->
+        <div class="work">
+          <div class="work__item js-work" data-slide="Collision">
+            <span class="brand">P&G</span>
+            <div class="name">
+              <p>Collision</p> 
+            </div>
           </div>
-          <!-- <img src="./meijer/ice-cream.jpg" alt="Meijer"> -->
+        </div> 
+
+        <!-- P&G: First-Time Fresh -->
+        <div class="work">
+          <div class="work__item js-work" data-slide="First-Time Fresh">
+            <span class="brand">P&G</span>
+            <div class="name">
+              <p>First-Time Fresh</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Dehnco: The Most Classic Design -->
+        <div class="work">
+          <div class="work__item js-work" data-slide="The Most Classic Design">
+            <span class="brand">Dehnco</span>
+            <div class="name">
+              <p>The Most Classic Design</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Arrow Electronics: The Speed of Arrow -->
+        <div class="work">
+          <div class="work__item js-work" data-slide="The Speed of Arrow">
+            <span class="brand">Arrow Electronics</span>
+            <div class="name">
+              <p>The Speed of Arrow</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Dole Packaged Foods: Dolemates -->
+        <div class="work">
+          <div class="work__item js-work" data-slide="Dolemates">
+            <span class="brand">Dole Packaged Foods</span>
+            <div class="name">
+              <p>Dolemates</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Max Pawn Luxury: We Know Real -->
+        <div class="work">
+          <div class="work__item js-work" data-slide="We Know Real">
+            <span class="brand">Max Pawn Luxury</span>
+            <div class="name">
+              <p>We Know Real</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- EZ Pawn: You Won’t Believe It -->
+        <div class="work">
+          <div class="work__item js-work" data-slide="You Won’t Believe It">
+            <span class="brand">EZ Pawn</span>
+            <div class="name">
+              <p>You Won’t Believe It</p>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="work__container">
-        <div class="work__item js-work" data-slide="frederiks">
-          <div class="name">
-            <p>Frederik’s</p>
-          </div>
-          <!-- <img src="./frederiks/pasta.jpg" alt="Frederik’s"> -->
-        </div>
+      <!-- Work Images -->
+      <div class="works__images">
+          <!-- <img src="./works/collision.jpg" alt="Collision"> -->
+          <!-- <img src="./works/first-time-fresh.jpg" alt="First-Time Fresh"> -->
+          <!-- <img src="./works/the-most-classic-design.jpg" alt="The Most Classic Design"> -->
+          <!-- <img src="./works/the-speed-of-arrow.jpg" alt="The Speed of Arrow"> -->
+          <!-- <img src="./works/dolemates.jpg" alt="Dolemates"> -->
+          <!-- <img src="./works/we-know-real.jpg" alt="We Know Real"> -->
+          <!-- <img src="./works/you-won’t-believe-it.jpg" alt="You Won’t Believe It"> -->
       </div>
-
-      <div class="work__container">
-        <div class="work__item js-work" data-slide="dole-wiggles">
-          <div class="name">
-            <p>Dole Wiggles</p>
-          </div>
-          <!-- <img src="./dole/wiggles/dance.jpg" alt="Dole Wiggles"> -->
-        </div>
-      </div>
-
-      <div class="work__container">
-        <div class="work__item js-work" data-slide="fresh-thyme">
-          <div class="name">
-            <p>Fresh Thyme</p>
-          </div>
-          <!-- <img src="./fresh-thyme/get-real-steak.jpg" alt="Fresh Thyme"> -->
-        </div>
-      </div>
-
-      <div class="work__container">
-        <div class="work__item js-work" data-slide="buybuybaby">
-          <div class="name">
-            <p>buybuyBABY</p>
-          </div>
-          <!-- <img src="./buybuybaby/manifesto.jpg" alt="buybuyBABY"> -->
-        </div>
-      </div>
-
-      <div class="work__container">
-        <div class="work__item js-work" data-slide="dole-juice">
-          <div class="name">
-            <p>Dole Juice</p>
-          </div>
-          <!-- <img src="./dole/juice/rebecca.jpg" alt="Dole Juice"> -->
-        </div>
-      </div>
-
-
     </div>
     <div class="container logos">
       <h5>
