--- a/src/styles/scss/_shop.scss
+++ b/src/styles/scss/_shop.scss
@@ -15,7 +15,7 @@
 
   .wrapper {
     text-align: center;  
-    padding:0 4rem; 
+    padding:0 0; 
 
     .shopify-buy-frame--productSet {
       width: 90%;
