style: Shop - modify contact section padding and background color for improved aesthetics - adjust products section padding for better layout responsiveness across breakpoints - enhance shop section background with image and responsive sizing - add new color variable for shop section consistency

--- a/src/styles/scss/_contact.scss
+++ b/src/styles/scss/_contact.scss
@@ -3,8 +3,8 @@
 .contact {
   position: relative;
   overflow: hidden;
-  padding-top: 20vh;  
-  // background-color: #102d41;
+  padding-top: 0;  
+  background-color: var(--color-shop);
 
   .container {
     justify-content: center;
