--- a/src/styles/scss/_vars.scss
+++ b/src/styles/scss/_vars.scss
@@ -31,4 +31,6 @@ $main-font-title: "inter", sans-serif;
     --color-white: #FFFFFF;
     --color-grey: #93A0AA;
     --color-link: #fff;
+
+    --color-shop: #2A5C5C;
 }
