style: update section IDs for improved clarity and navigation consistency

--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -2,7 +2,7 @@
 // Products.astro
 ---
 
-<section id="products" class="products shop">
+<section id="shop" class="products shop">
   <div class="shop__hero"> 
   </div> 
     
