--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -20,24 +20,28 @@
       <div class="team"> 
 
         <div class="team__card">  
+          <span class="team__name">Ben</span>
           <picture>
             <img src="./team/ben.jpg" alt="Ben" data-critical="true" loading="eager" />
           </picture>
         </div>
 
         <div class="team__card">  
+          <span class="team__name">Nik</span>
           <picture>
             <img src="./team/nik.jpg" alt="Nik" data-critical="true" loading="eager" />
           </picture>
         </div>
 
         <div class="team__card">  
+          <span class="team__name">Phil</span>
           <picture>
             <img src="./team/phil.jpg" alt="Phil" data-critical="true" loading="eager" />
           </picture>
         </div>
 
         <div class="team__card">  
+          <span class="team__name">Kristi</span>
           <picture>
             <img src="./team/kristi.jpg" alt="Kristi" data-critical="true" loading="eager" />
           </picture>
