style: update About section with full names for team members and adjust name positioning - add full names for team members Ben, Nik, Phil, and Kristi - modify styles for team member names to improve visibility and layout

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -20,30 +20,30 @@
       <div class="team"> 
 
         <div class="team__card">  
-          <span class="team__name">Ben</span>
+          <span class="team__name">Ben Kline</span>
           <picture>
-            <img src="./team/ben.jpg" alt="Ben" data-critical="true" loading="eager" />
+            <img src="./team/ben.jpg" alt="Ben Kline" data-critical="true" loading="eager" />
           </picture>
         </div>
 
         <div class="team__card">  
-          <span class="team__name">Nik</span>
+          <span class="team__name">Nik Traxler</span>
           <picture>
-            <img src="./team/nik.jpg" alt="Nik" data-critical="true" loading="eager" />
+            <img src="./team/nik.jpg" alt="Nik Traxler" data-critical="true" loading="eager" />
           </picture>
         </div>
 
         <div class="team__card">  
-          <span class="team__name">Phil</span>
+          <span class="team__name">Phil Jungmann</span>
           <picture>
-            <img src="./team/phil.jpg" alt="Phil" data-critical="true" loading="eager" />
+            <img src="./team/phil.jpg" alt="Phil Jungmann" data-critical="true" loading="eager" />
           </picture>
         </div>
 
         <div class="team__card">  
-          <span class="team__name">Kristi</span>
+          <span class="team__name">Kristi Neitzel</span>
           <picture>
-            <img src="./team/kristi.jpg" alt="Kristi" data-critical="true" loading="eager" />
+            <img src="./team/kristi.jpg" alt="Kristi Neitzel" data-critical="true" loading="eager" />
           </picture>
         </div>
 
