--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,6 +27,7 @@
 @use './scss/products' as *;
 @use './scss/shop' as *;
 @use './scss/contact' as *;
+@use './scss/brands-carousel' as *;
 // La URL externa de Google Fonts puede quedarse con @import
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
