--- a/src/styles/scss/_html.scss
+++ b/src/styles/scss/_html.scss
@@ -69,17 +69,17 @@ h5,
 h6 {
   font-weight: 900;
   letter-spacing: -0.01em;
-  line-height: 1.1; }
+  line-height: 1.1; 
+  margin: 0;
+}
  
 
 h1 {
   font-size: clamp(40px, 5vw, 120px);  
 }
 
-h3 { 
-  font-size: clamp(40px, 5vw, 80px); 
+h3 {  
   margin-bottom: 4rem !important;
- 
 }
 
 h4 { 
