--- a/src/styles/scss/_html.scss
+++ b/src/styles/scss/_html.scss
@@ -1,8 +1,12 @@
 @use './vars' as *;
 
+ 
 html,
 body {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%; 
   overflow-x: hidden;
 
   font-family: var(--font-main), sans-serif;
