--- a/src/styles/scss/_main.scss
+++ b/src/styles/scss/_main.scss
@@ -63,4 +63,18 @@
   z-index: -1;
   pointer-events: none;
   opacity: 0.3;
-} 
+}
+
+
+#lava-lamp-canvas {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0; 
+}
+
+.title {
+  font-size: clamp(40px, 5vw, 80px);
+}
