--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -5,18 +5,16 @@
 <section id="about-us" class="about">
   <div class="wrapper">
     <!-- About the ideas -->
-    <div class="container about__intro">
-      <h3 class="title">
-        <span class="asterisk">*</span>The best ideas 
-        <br />know no bounds.      
-      </h3>
-      <p class="paragraph">They flood our thoughts, ignite our emotions and build enough momentum to change the way we act. Ideas that flow are what the modern marketer needs to thrive.</p>
-    </div> 
-    <!-- About the team -->
-    <div class="container about__team">
+    <div class="container about__intro"> 
+
       <h3 class="title">
         <span class="asterisk">*</span>Who we are
       </h3>
+      <p class="paragraph">Could we add some text here...?</p>
+    </div> 
+    
+    <!-- About the team -->
+    <div class="container about__team">
       <div class="team"> 
 
         <div class="team__card">  
@@ -93,8 +91,7 @@
 
   initParallax('.about .paragraph', {
     speed: 0.75  
-  });
- 
+  }); 
   
   initParallax('.about .logo', {
     speed: 1  
