--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -72,8 +72,8 @@
   //   speed: 1.5  
   // });
 
-  initUkiyo('.hero .video img', {
-    scale: 1.25,
-    speed: 1.1
-  });
+  // initUkiyo('.hero .video img', {
+  //   scale: 1.25,
+  //   speed: 1.1
+  // });
 </script>
