--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -44,7 +44,10 @@
     <link rel="preload" as="image" href="/images/hero.jpg" />
     <link rel="preload" as="image" href="/images/phrase.jpg" />
     <link rel="preload" as="image" href="/images/flow.jpg" />
-    <link rel="preload" as="image" href="/images/team-kristi.png" />
+    <link rel="preload" as="image" href="/team/kristi.jpg" />
+    <link rel="preload" as="image" href="/team/phil.jpg" />
+    <link rel="preload" as="image" href="/team/nik.jpg" />
+    <link rel="preload" as="image" href="/team/ben.jpg" />
     
     <!-- Vimeo Player API -->
     <script src="https://player.vimeo.com/api/player.js"></script>
