style: update BrandsCarousel component with new logo and remove obsolete image - replace EZ-corp logo with EZ-Pawn logo in BrandsCarousel for brand accuracy - delete obsolete EZ-corp image file to streamline assets

--- a/src/components/BrandsCarousel.astro
+++ b/src/components/BrandsCarousel.astro
@@ -13,7 +13,7 @@ const {
     { src: "./brands/Arrow.png", alt: "Arrow" },
     { src: "./brands/Dehnco.png", alt: "Dehnco" },
     { src: "./brands/Dole.png", alt: "Dole" },
-    { src: "./brands/EZ-corp.png", alt: "EZ-corp" },
+    { src: "./brands/EZ-Pawn.png", alt: "EZ-Pawn" },
     { src: "./brands/Knudsen.png", alt: "Knudsen" },
     { src: "./brands/P&G.png", alt: "P&G" },
     { src: "./brands/REW.png", alt: "REW" },
